package ucf.assignments;

import javafx.fxml.FXML;
import javafx.scene.control.Alert;
import javafx.scene.control.TextArea;
import javafx.scene.control.TextField;
import javafx.stage.Stage;
import java.text.NumberFormat;
import java.util.Objects;
import java.util.regex.Pattern;

public class EditItemController {
	private static Stage dialogStage;

	@FXML private TextField PriceField;
	@FXML private TextField SerialField;
	@FXML private TextArea NameField;

	@FXML
	public void initialize () {
		PriceField.setText(InventoryApp.currentItem.getPrice().replace("$",""));
		SerialField.setText(InventoryApp.currentItem.getSerial());
		NameField.setText(InventoryApp.currentItem.getName());
	}

	public void setDialogStage(Stage stage) {
		dialogStage = stage;
	}

	@FXML
	public void SubmitButtonClicked() {
		if(isValid()) {
			NumberFormat usd = NumberFormat.getCurrencyInstance();
			EditItem(usd.format(Double.parseDouble(this.PriceField.getText())),this.SerialField.getText(),this.NameField.getText());

			InventoryApp.currentItem = null;
			dialogStage.close();
		}
	}

	public void EditItem(String newPrice,String newSerial,String newName) {
		InventoryApp.currentItem.setPrice(newPrice);
		InventoryApp.currentItem.setSerial(newSerial);
		InventoryApp.currentItem.setName(newName);
	}

	@FXML
	public void CancelButtonClicked() {
		System.out.println("Cancelled");
		InventoryApp.currentItem = null;
		dialogStage.close();
	}

	private boolean isValid () {
		String errorMessage = "";

		// Check price validity
		errorMessage = Validator.validatePrice(errorMessage);

		// Check serial number validity
		errorMessage = Validator.validateSerial(errorMessage);

		// Check name validity
		errorMessage = Validator.validateName(errorMessage);

		if (errorMessage.length() == 0) {
			return true;
		}
		else {
			openAlert(errorMessage);

			return false;
		}
	}

	private void openAlert(String errorMessage) {
		Alert alert = new Alert(Alert.AlertType.ERROR);
		alert.initOwner(dialogStage);
		alert.setTitle("Invalid Input");
		alert.setHeaderText("Please correct invalid fields");
		alert.setContentText(errorMessage);

		alert.showAndWait();
	}


}
