@startuml
'https://plantuml.com/class-diagram
class InventoryApp {
+ {static} Stage mainStage;
+ {static} MainAppController mainAppController;
..Active Memory..
+ {static} InventoryItem currentItem;
+ {static} ObservableList<InventoryItem> tableData;
+ {static} LinkedList<InventoryItem> items;
--
+ {static} void main(String[] args)
+ void start(Stage primaryStage)
+ {static} void setList(LinkedList<InventoryItem> newList)
}


class MainAppController {
@FXML ChoiceBox<String> SearchTypeChoiceBox;
@FXML TextField SearchField;
@FXML Label NameLabel;
@FXML Label SerialLabel;
@FXML Label PriceLabel;
@FXML Label InventoryNameLabel;

..Table View..
@FXML private TableView<InventoryItem> table;
@FXML private TableColumn<InventoryItem, String> priceColumn;
@FXML private TableColumn<InventoryItem, String> serialColumn;
@FXML private TableColumn<InventoryItem, String> nameColumn;
--
+ void initialize()
+ MainAppController()
- void showItem(InventoryItem newValue)
..Search Stuff..
- void searchSerial(String text)
- void searchName(String text)
..File Stuff..
- File getSaveFile()
- File getLoadFile()
- void parseToFile(File file)
- void loadFromFile(File file)
..Event Handlers..
void AddButtonClicked()
void EditButtonClicked()
void DeleteButtonClicked()
void SearchButtonClicked()
void clearButtonClicked()
void SaveButtonClicked()
void LoadButtonClicked()
}


class AddItemController {
- static Stage dialogStage;
..Nodes..
@FXML TextArea NameField;
@FXML TextField PriceField;
@FXML TextField SerialField;
--
..Event Handlers..
@FXML void AddButtonClicked()
@FXML void CancelButtonClicked()
..methods..
+ void setDialogStage(Stage stage)
- boolean isValid ()
- void openAlert(String errorMessage)
+ void AddItem(InventoryItem newItem)
}

class EditItemController {
- static Stage dialogStage;
..Nodes..
@FXML TextArea NameField;
@FXML TextField PriceField;
@FXML TextField SerialField;
--
..Event Handlers..
@FXML void SubmitButtonClicked()
@FXML void CancelButtonClicked()
..methods..
+ void setDialogStage(Stage stage)
- boolean isValid ()
- void openAlert(String errorMessage)
+ EditItem(String newPrice,String newSerial,String newName)
}


class InventoryItem {
..Fields..
- final SimpleStringProperty price
- final SimpleStringProperty serial
- final SimpleStringProperty name
--
+ InventoryItem(String price, String serial, String name)

..Accessors and Mutators..
+ String getPrice()
+ SimpleStringProperty priceProperty()
+ void setPrice(String price)
+ String getSerial()
+ SimpleStringProperty serialProperty()
+ void setSerial(String serial)
+ String getName()
+ SimpleStringProperty nameProperty()
+ void setName(String name)
+ String toString()
}





package Utility {
class Validator {
+ {static} String validateName(String name)
+ {static} String validateSerial(String serial)
+ {static} String validatePrice(String price)
}

class FileHandler {
+{static} BufferedReader getReader(File file)
+{static} BufferedWriter getWriter(File file)
+{static} void writeToFile(String string, File file)
+{static} String readFromFile(File file)
}

class TSVParser {
+ {static} void parseToFile(File file, LinkedList<InventoryItem> data)
+ {static} LinkedList<InventoryItem> parseFromFile(File file)
- {static} String tabify(LinkedList<InventoryItem> data)
}

class JsonParser {
+ {static} void parseToFile(File file, LinkedList<InventoryItem> items)
+ {static} LinkedList<InventoryItem> parseFromFile(File file)
}

class HtmlParser {
+ {static} void parseToFile(File file, LinkedList<InventoryItem> items)
+ {static} LinkedList<InventoryItem> parseFromFile(File file)
}

note "Parsers" as n1

n1 .. TSVParser
n1 . JsonParser
n1 .. HtmlParser
}

package FXML {
class MainAppGUI
class AddItemGui
class EditItemGui
}



InventoryApp - InventoryItem
InventoryApp -- MainAppController


MainAppController -- AddItemController
MainAppController -- EditItemController

@enduml
